test/parse_error/tag_key.pi
component Component {
  let fail = #String(key: "f.#ail");

  <div class="Section">
    {fail}
  </div>
}
